# vms-api

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
assets/: response.json
modules/api/: CMakeLists.txt
modules/api/src/: main.cpp  server.cpp  server.h  session.cpp  session.h
modules/base/: vms_exception.h  vms_interface.h
modules/flussonic/: CMakeLists.txt
modules/flussonic/include/: flussonic.h
modules/flussonic/src/: flussonic.cpp
modules/huawei/: CMakeLists.txt
modules/huawei/include/: hw_errors.h  hw_ivs.h
modules/huawei/src/: hw_errors.cpp  hw_ivs.cpp
